# RandBLAS

./: .cloc_exlude  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  INSTALL.md  README.md
.github/actions/setup-randblas-deps/: action.yml
.github/workflows/: core.yml  docs.yml  downstream-consumer.yml  examples.yml  thread-sanitizer.yml
CMake/: FindRandom123.cmake  MKL_sparse.cmake  RandBLASConfig.cmake.in  rb_build_options.cmake  rb_config.cmake
RandBLAS/: CMakeLists.txt  dense_skops.hh  device.hh  dimensions.hh  matrix.hh  precision.hh  random_gen.hh  skge.hh  sparse_skops.hh  util.hh
RandBLAS/sparse_data/: coo_spmm_impl.hh  csc_spmm_impl.hh  csc_trsm_impl.hh  csr_spmm_impl.hh  csr_trsm_impl.hh  mkl_spmm_impl.hh  spmm_dispatch.hh
RandBLAS/testing/: DevNotes.md  comparison.hh  lapack_like.hh  linops.hh  sparse_data.hh  stats.hh
docker/tsan/: Dockerfile  run.sh
examples/: CMakeLists.txt
examples/simple-kernel-benchmarks/: spmm_performance.cc
examples/sparse-low-rank-approx/: qrcp_matrixmarket.cc  svd_rank1_plus_noise.cc
rtd/source/api_reference/: skops_and_dists.rst
test/: CMakeLists.txt  DevNotes.md  test_exceptions.cc
test/basic_rng/: test_continuous.cc  test_discrete.cc  test_distortion.cc  test_r123.cc
test/datastructures/: test_coo_matrix.cc  test_csc_matrix.cc  test_csr_matrix.cc  test_denseskop.cc  test_sparseskop.cc  test_spmat_conversions.cc
test/downstream/: CMakeLists.txt  main.cc
test/linops/: DevNotes.md  linop_common.hh  test_lskge3.cc  test_lskges.cc  test_rskge3.cc  test_rskges.cc  test_sketch_sparse.cc  test_sketch_symmetric.cc  test_sketch_vector.cc  test_sparse_trsm.cc  test_spgemm.cc
test/linops/test_spmm/: DevNotes.md  spmm_test_helpers.hh  test_spmm_coo.cc  test_spmm_csc.cc  test_spmm_csr.cc
test/meta/: test_comparison.cc  test_lapack_like.cc  test_sparse_data_generators.cc
